--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "task-management-service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "build": "json-server db.json"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/katrysja/task-management-service.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
